fixed: typo and bug

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turbo-stimulus-typescript-example",
+  "name": "@masuidrive/turbo-stimulus-typescript-example",
   "version": "3.0.0",
   "main": "index.js",
   "license": "MIT",
